Fix scroll bar flicker

--- a/src/style/theme.css
+++ b/src/style/theme.css
@@ -899,6 +899,7 @@ nav>ul>li:last-child::after {
     display:none
 }
 body {
+    overflow-y: scroll;
     max-width:var(--ct-width);
     padding:0 1.5rem;
     margin:0 auto;
